# cc-transaction-logger

./: .env.example  .gitignore  EXTRACTOR_PROMPT.md  README.md  main.py  pyproject.toml  test_extractor.py
cards/: __init__.py  _template.py
utils/: __init__.py  gmail.py  googlesheets.py
utils/extractors/: __init__.py  _template_extractor.py  base.py  foodpanda.py  grab.py  greengsm.py  metrobank.py
utils/extractors/test_data/: README.md  __init__.py  conftest.py  foodpanda_email_template.py  test_extractors.py
